--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-hello word 
-woshi xioamin
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <title>严振杰</title>
+</head>
+<body>
+我叫王春敏，web前端初学者。
+</body>
+</html>
