--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>严振杰</title>
+    <title>王春敏</title>
 </head>
 <body>
 我叫王春敏，web前端初学者。
